added hero image and overlay

--- a/index.html
+++ b/index.html
@@ -5,8 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TMART Ecommerce Shop</title>
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d49c387940.js" crossorigin="anonymous"></script>
+    <style>
+        body {
+            padding: 0;
+            margin: 0;
+            scroll-behavior: smooth;
+            box-sizing: border-box;
+        }
+
+        .hero {
+            width: 100%;
+            height: 100vh;
+            background-image: url(./assets/images/2.webp);
+            background-size: cover;
+            background-position: center;
+        }
+
+        .overlay {
+            width: 100%;
+            height: 100vh;
+            background-color: rgba(0, 0, 0, 0.80);
+        }
+    </style>
 </head>
 <body>
-    
+    <section class="hero">
+        <div class="overlay">
+            <header class="header">
+                <div class="logo"></div>
+                <nav class="nav-menu"></nav>
+                <div class="header-icons"></div>
+            </header>
+            <div class="hero-content"></div>
+        </div>
+    </section>
 </body>
 </html>
