added logo and mobile icons

--- a/index.html
+++ b/index.html
@@ -32,19 +32,66 @@
         .overlay {
             width: 100%;
             height: 100vh;
-            background-color: rgba(0, 0, 0, 0.80);
+            background-color: rgba(0, 0, 0, 0.50);
+        }
+
+        .hero-container {
+            width: 92%;
+            height: 100vh;
+            margin: 0 auto;
+        }
+        .header {
+            width: 100%;
+            height: 1.75rem;
+            /*border: 1px solid red;*/
+            position: relative;
+            top: 2.13rem;
+            display: flex;
+            justify-content: space-between;
+        }
+        
+        .logo {
+            width: 7.06rem;
+            height: 1.69rem;
+        }
+        .header-icons {
+            width: 6.31rem;
+            height: 1.69rem;
+        }
+        .header-icons a:not(:last-child) {
+            margin-right: 0.3rem;
+        }
+        .nav-menu {
+            width: auto;
+            height: 1.69rem;
         }
     </style>
 </head>
 <body>
     <section class="hero">
         <div class="overlay">
-            <header class="header">
-                <div class="logo"></div>
-                <nav class="nav-menu"></nav>
-                <div class="header-icons"></div>
-            </header>
-            <div class="hero-content"></div>
+            <div class="hero-container">
+                <header class="header">
+                    <div class="h-child logo">
+                        <a href="#">
+                            <img src="./assets/images/Site_logo.png" alt="tmart logo">
+                        </a>
+                    </div>
+                    <nav class="h-child nav-menu"></nav>
+                    <div class="h-child header-icons">
+                        <a href="#">
+                            <img src="./assets/images/user.png" alt="user icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/shopping-cart.png" alt="shopping cart icon">
+                        </a>
+                        <a href="#">
+                            <img src="./assets/images/menu.png" alt="mobile menu icon">
+                        </a>
+                    </div>
+                </header>
+                <div class="hero-content"></div>
+            </div>
         </div>
     </section>
 </body>
