--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
             width: 92%;
             height: 100vh;
             margin: 0 auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         .header {
             width: 100%;
@@ -65,6 +69,63 @@
             width: auto;
             height: 1.69rem;
         }
+        .hero-content {
+            width: 95%;
+            height: 10.69rem;
+            margin: auto;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.80);
+        }
+        .hero-content h2 {
+            font-family: 'Poppins', sans-serif;
+            font-size: 1.88rem;
+            font-weight: 300;
+            line-height: 2.06rem;
+            margin-bottom: 0;
+        }
+        .hero-content button {
+            margin: 0.80rem 0 1.1rem 0;
+            font-family: 'Dosis', sans-serif;
+            font-size: 1rem;
+            font-weight: 500;
+            line-height: 2.06rem;
+            border: none;
+            outline: none;
+            background: none;
+            text-decoration: underline;
+        }
+
+        @media (min-width:900px) {
+            .hero-content {
+                width: 32.56rem;
+                height: 12.75rem;
+                margin: auto;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                text-align: center;
+                background-color: rgba(255, 255, 255, 0.80);
+            }
+            .hero-content h2 {
+                font-family: 'Poppins', sans-serif;
+                font-size: 1.88rem;
+                font-weight: 300;
+            }
+            .hero-content button {
+                font-family: 'Dosis', sans-serif;
+                font-size: 1rem;
+                font-weight: 500;
+                border: none;
+                outline: none;
+                background: none;
+                text-decoration: underline;
+            }
+        }
     </style>
 </head>
 <body>
@@ -77,7 +138,14 @@
                             <img src="./assets/images/Site_logo.png" alt="tmart logo">
                         </a>
                     </div>
-                    <nav class="h-child nav-menu"></nav>
+                    <nav class="h-child nav-menu">
+                        <ul>
+                            <li><a href="#">Portfolio</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Shop</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </nav>
                     <div class="h-child header-icons">
                         <a href="#">
                             <img src="./assets/images/user.png" alt="user icon">
@@ -90,7 +158,10 @@
                         </a>
                     </div>
                 </header>
-                <div class="hero-content"></div>
+                <div class="hero-content">
+                    <h2>New Product Collection</h2>
+                    <button>SHOP NOW</button>
+                </div>
             </div>
         </div>
     </section>
