made changes to hero cta

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </header>
                 <div class="hero-content">
                     <h2>New Product Collection</h2>
-                    <button>SHOP NOW</button>
+                    <button type="button" class="button">SHOP NOW</button>
                 </div>
             </div>
         </div>
