added containers for message section

--- a/index.html
+++ b/index.html
@@ -52,5 +52,9 @@
             </div>
         </div>
     </section>
+    <section class="message">
+        <div class="msg left"></div>
+        <div class="msg right"></div>
+    </section>
 </body>
 </html>
