updated content and style of msg section

--- a/index.html
+++ b/index.html
@@ -53,8 +53,24 @@
         </div>
     </section>
     <section class="message">
-        <div class="msg left"></div>
-        <div class="msg right"></div>
+        <div class="msg left">
+            <h2>New Furniture <span class="break">Collection</span></h2>
+            <div class="msg-line">
+                <button type="button" class="button">SHOP NOW</button>
+                <span class="line">
+                    <img src="/assets/images/Line 1.png" alt="line">
+                </span>
+            </div>
+        </div>
+        <div class="msg right">
+            <h2>New Baskets <span class="break">Collection</span></h2>
+            <div class="msg-line">
+                <button type="button" class="button">SHOP NOW</button>
+                <span class="line">
+                    <img src="/assets/images/Line 1.png" alt="line">
+                </span>
+            </div>
+        </div>
     </section>
 </body>
 </html>
