--- a/index.html
+++ b/index.html
@@ -74,8 +74,21 @@
             </div>
         </div>
     </section>
+    <section class="products">
+        <h1 class="headline">Best products</h1>
+        <div class="pro-container">
+            <div class="product pro1"></div>
+            <div class="product pro2"></div>
+            <div class="product pro3"></div>
+            <div class="product pro4"></div>
+            <div class="product pro5"></div>
+            <div class="product pro6"></div>
+            <div class="product pro7"></div>
+            <div class="product pro8"></div>
+        </div>
+    </section>
     <script>
         feather.replace()
-      </script>
+    </script>
 </body>
 </html>
