--- a/index.html
+++ b/index.html
@@ -73,16 +73,40 @@
         </div>
     </section>
     <section class="products">
-        <h1 class="headline">Best products</h1>
+        <h1 class="headline">Best Products</h1>
         <div class="pro-container">
-            <div class="product pro1"></div>
-            <div class="product pro2"></div>
-            <div class="product pro3"></div>
-            <div class="product pro4"></div>
-            <div class="product pro5"></div>
-            <div class="product pro6"></div>
-            <div class="product pro7"></div>
-            <div class="product pro8"></div>
+            <div class="product pro1">
+                <h2>Christopher <span class="break">Knight Furniture</span></h2>
+                <p>$ 235.23</p>
+            </div>
+            <div class="product pro2">
+                <h2>Wheat Straw <span class="break">unbreakable cup</span></h2>
+                <p>$ 67.15</p>
+            </div>
+            <div class="product pro3">
+                <h2>Adidas Classic <span class="break">Bag</span></h2>
+                <p>$ 49.82</p>
+            </div>
+            <div class="product pro4">
+                <h2>Desk Pencil - Pen <span class="break">Holder</span></h2>
+                <p>$ 22.30</p>
+            </div>
+            <div class="product pro5">
+                <h2>Ripple Creak Key <span class="break">Holder</span></h2>
+                <p>$ 8.13</p>
+            </div>
+            <div class="product pro6">
+                <h2>Economical <span class="break">Cotton Canvas</span></h2>
+                <p>$ 11.08</p>
+            </div>
+            <div class="product pro7">
+                <h2>Michael Kors <span class="break">Original</span></h2>
+                <p>$ 15.10</p>
+            </div>
+            <div class="product pro8">
+                <h2>Bostanten <span class="break">Women Leather</span></h2>
+                <p>$ 234.26</p>
+            </div>
         </div>
     </section>
     <script>
