created blog section and added content

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </div>
         </div>
     </section>
-    <section class="message">
-        <div class="msg left">
+    <section class="message"> <!--section for message,just below hero section-->
+        <div class="msg left"> <!--container for left image and content-->
             <h2>New Furniture <span class="break">Collection</span></h2>
             <div class="msg-line">
                 <button type="button" class="button">SHOP NOW</button>
@@ -62,7 +62,7 @@
                 </span>
             </div>
         </div>
-        <div class="msg right">
+        <div class="msg right"> <!--container for right image and content-->
             <h2>New Baskets <span class="break">Collection</span></h2>
             <div class="msg-line">
                 <button type="button" class="button">SHOP NOW</button>
@@ -72,7 +72,7 @@
             </div>
         </div>
     </section>
-    <section class="products">
+    <section class="products"> <!--products section-->
         <h1 class="headline">Best Products</h1>
         <div class="pro-container">
             <div class="product pro1">
@@ -107,6 +107,47 @@
                 <h2>Bostanten <span class="break break1">Women Leather</span></h2>
                 <p>$ 234.26</p>
             </div>
+        </div>
+    </section>
+    <section class="blog">
+        <h1 class="headline">Recent News</h1>
+        <div class="blog-container">
+            <article class="blog article1">
+                <div>
+                    <div>
+                        <h2>20</h2>
+                        <p>may</p>
+                    </div>
+                </div>
+                <div>
+                    <h2>How to Optimize Your eCommerce Store  <span class="break break1">for Better Conversions</span></h2>
+                    <button>read more</button>
+                </div>
+            </article>
+            <article class="blog article2">
+                <div>
+                    <div>
+                        <h2>13</h2>
+                        <p>may</p>
+                    </div>
+                </div>
+                <div>
+                    <h2>Understanding and Implementing SEO for <span class="break break1">eCommerce Success</span></h2>
+                    <button>read more</button>
+                </div>
+            </article>
+            <article class="blog article3">
+                <div>
+                    <div>
+                        <h2>04</h2>
+                        <p>may</p>
+                    </div>
+                </div>
+                <div>
+                    <h2>Effective Email Marketing Strategies for  <span class="break break1">eCommerce Businesses</span></h2>
+                    <button>read more</button>
+                </div>
+            </article>
         </div>
     </section>
     <script>
