updated blog section styling

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>TMART Ecommerce Shop</title>
     <link rel="stylesheet" href="./assets/styles/style.css">
     <link rel="stylesheet" href="./assets/styles/hero.css">
+    <link rel="stylesheet" href="./assets/styles/blog-footer.css">
     <link rel="stylesheet" href="./assets/styles/msg-products.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -109,43 +110,58 @@
             </div>
         </div>
     </section>
-    <section class="blog">
+    <section class="blog-section">
         <h1 class="headline">Recent News</h1>
         <div class="blog-container">
             <article class="blog article1">
-                <div>
-                    <div>
-                        <h2>20</h2>
-                        <p>may</p>
+                <div class="date-container1">
+                    <div class="date-container2">
+                        <h2 class="date-number">20</h2>
+                        <p class="date-month">may</p>
                     </div>
                 </div>
-                <div>
-                    <h2>How to Optimize Your eCommerce Store  <span class="break break1">for Better Conversions</span></h2>
-                    <button>read more</button>
+                <div class="blog-ctn">
+                    <h2 class="blog-msg">How to Optimize Your eCommerce Store  <span class="break break1">for Better Conversions</span></h2>
+                    <div>
+                        <button type="button" class="button">read more</button>
+                        <span class="line1">
+                            <img src="/assets/images/Line 1.png" alt="line">
+                        </span>
+                    </div>
                 </div>
             </article>
             <article class="blog article2">
-                <div>
-                    <div>
-                        <h2>13</h2>
-                        <p>may</p>
+                <div class="date-container1">
+                    <div class="date-container2">
+                        <h2 class="date-number">13</h2>
+                        <p class="date-month">may</p>
                     </div>
                 </div>
-                <div>
-                    <h2>Understanding and Implementing SEO for <span class="break break1">eCommerce Success</span></h2>
-                    <button>read more</button>
+                <div class="blog-ctn">
+                    <h2 class="blog-msg">Understanding and Implementing SEO for <span class="break break1">eCommerce Success</span></h2>
+                    <div>
+                        <button type="button" class="button">read more</button>
+                        <span class="line1">
+                            <img src="/assets/images/Line 1.png" alt="line">
+                        </span>
+                    </div>
                 </div>
             </article>
             <article class="blog article3">
-                <div>
-                    <div>
-                        <h2>04</h2>
-                        <p>may</p>
+                <div class="date-container1">
+                    <div class="date-container2">
+                        <h2 class="date-number">04</h2>
+                        <p class="date-month">may</p>
                     </div>
                 </div>
-                <div>
-                    <h2>Effective Email Marketing Strategies for  <span class="break break1">eCommerce Businesses</span></h2>
-                    <button>read more</button>
+                <div class="blog-ctn">
+                    <h2 class="blog-msg">Effective Email Marketing Strategies for  <span class="break break1">eCommerce Businesses</span></h2>
+                    <div>
+                        <button type="button" class="button">read more</button>
+                        <span class="line1">
+                            <img src="/assets/images/Line 1.png" alt="line">
+                        </span>
+                    </div>
                 </div>
             </article>
         </div>
