--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
             </article>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-left">
+                <a href="#">
+                    <img src="/assets/images/logo.png" alt="footer logo">
+                </a>
+            </div>
+            <div class="footer-right"></div>
+            <hr>
+        </div>
+    </footer>
     <script>
         feather.replace()
     </script>
