--- a/index.html
+++ b/index.html
@@ -168,32 +168,38 @@
     </section>
     <footer class="footer">
         <div class="footer-ctn">
-            <div class="footer-left">
+            <div class="footer-logo">
                 <a href="#">
                     <img src="/assets/images/logo.png" alt="footer logo">
                 </a>
-                <div class="left-item">
-                    <i data-feather="map-pin"></i>
-                    <p>194 Main Rd T, FS Rayed, USA</p>
+            </div>
+            <div class="footer-content">
+                <div class="footer-left">
+                    <div class="left-item">
+                        <i data-feather="map-pin"></i>
+                        <p>194 Main Rd T, FS Rayed, USA</p>
+                    </div>
+                    <div class="left-item">
+                        <i data-feather="mail"></i>
+                        <p>info@tmart.org</p>
+                    </div>
+                    <div class="left-item">
+                        <i data-feather="phone-call"></i>
+                        <p>+233 244 244 244</p>
+                    </div>
                 </div>
-                <div class="left-item">
-                    <i data-feather="mail"></i>
-                    <p>info@tmart.org</p>
-                </div>
-                <div class="left-item">
-                    <i data-feather="phone-call"></i>
-                    <p>+233 244 244 244</p>
+                <div class="footer-right">
+                    <p>
+                        Subscribe to our newsletter and get 10% off your first purchase
+                    </p>
+                    <div class="btn-container">
+                        <input type="text" name="subscribe" id="subscribe" placeholder="Enter email address">
+                        <button><i data-feather="chevron-right"></i></button>
+                    </div>
                 </div>
             </div>
-            <div class="footer-right">
-                <p>
-                    Subscribe to our newsletter and get 10% off your first purchase
-                </p>
-                <div class="btn-container">
-                    <input type="text" name="subscribe" id="subscribe" placeholder="Enter email address">
-                    <button><i data-feather="chevron-right"></i></button>
-                </div>
-            </div>
+        </div>
+        <div class="copyright-ctn">
             <hr>
             <div class="copyright">
                 <p>&copy Tmart - All rights reserved</p>
