updated path to images for external hosting

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="msg-line">
                 <button type="button" class="button">SHOP NOW</button>
                 <span class="line">
-                    <img src="/assets/images/Line 1.png" alt="line">
+                    <img src="./assets/images/Line 1.png" alt="line">
                 </span>
             </div>
         </div>
@@ -68,7 +68,7 @@
             <div class="msg-line">
                 <button type="button" class="button">SHOP NOW</button>
                 <span class="line">
-                    <img src="/assets/images/Line 1.png" alt="line">
+                    <img src="./assets/images/Line 1.png" alt="line">
                 </span>
             </div>
         </div>
@@ -125,7 +125,7 @@
                     <div>
                         <button type="button" class="button">read more</button>
                         <span class="line1">
-                            <img src="/assets/images/Line 1.png" alt="line">
+                            <img src="./assets/images/Line 1.png" alt="line">
                         </span>
                     </div>
                 </div>
@@ -142,7 +142,7 @@
                     <div>
                         <button type="button" class="button">read more</button>
                         <span class="line1">
-                            <img src="/assets/images/Line 1.png" alt="line">
+                            <img src="./assets/images/Line 1.png" alt="line">
                         </span>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                     <div>
                         <button type="button" class="button">read more</button>
                         <span class="line1">
-                            <img src="/assets/images/Line 1.png" alt="line">
+                            <img src="./assets/images/Line 1.png" alt="line">
                         </span>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
         <div class="footer-ctn">
             <div class="footer-logo">
                 <a href="#">
-                    <img src="/assets/images/logo.png" alt="footer logo">
+                    <img src="./assets/images/logo.png" alt="footer logo">
                 </a>
             </div>
             <div class="footer-content">
