--- a/index.html
+++ b/index.html
@@ -76,37 +76,85 @@
     <section class="products"> <!--products section-->
         <h1 class="headline">Best Products</h1>
         <div class="pro-container">
-            <div class="product pro1">
-                <h2>Christopher <span class="break break1">Knight Furniture</span></h2>
-                <p>$ 235.23</p>
+            <div class="product">
+                <div class="pro-img">
+                    <img src="./assets/images/13.webp" alt="furniture">
+                </div>
+                <div class="pro-desc">
+                    <h2>Christopher <span class="break break1">Knight Furniture</span></h2>
+                    <p>$ 235.23</p>
+                    <button type="button" class="button">BUY NOW</button>
+                </div>
             </div>
-            <div class="product pro2">
-                <h2>Wheat Straw <span class="break break1">unbreakable cup</span></h2>
-                <p>$ 67.15</p>
+            <div class="product">
+                <div class="pro-img">
+                    <img src="./assets/images/2 (3).webp" alt="cup">
+                </div>
+                <div class="pro-desc">
+                    <h2>Wheat Straw <span class="break break1">unbreakable cup</span></h2>
+                    <p>$ 67.15</p>
+                    <button type="button" class="button">BUY NOW</button>
+                </div>
             </div>
-            <div class="product pro3">
-                <h2>Adidas Classic <span class="break break1">Bag</span></h2>
-                <p>$ 49.82</p>
+            <div class="product">
+                <div class="pro-img">
+                    <img src="./assets/images/3.webp" alt="bag">
+                </div>
+                <div class="pro-desc">
+                    <h2>Adidas Classic <span class="break break1">Bag</span></h2>
+                    <p>$ 49.82</p>
+                    <button type="button" class="button">BUY NOW</button>
+                </div>
             </div>
-            <div class="product pro4">
-                <h2>Desk Pencil - Pen <span class="break break1">Holder</span></h2>
-                <p>$ 22.30</p>
+            <div class="product">
+                <div class="pro-img">
+                    <img src="./assets/images/4.webp" alt="pencil holder">
+                </div>
+                <div class="pro-desc">
+                    <h2>Desk Pencil - Pen <span class="break break1">Holder</span></h2>
+                    <p>$ 22.30</p>
+                    <button type="button" class="button">BUY NOW</button>
+                </div>
             </div>
-            <div class="product pro5">
-                <h2>Ripple Creak Key <span class="break break1">Holder</span></h2>
-                <p>$ 8.13</p>
+            <div class="product">
+                <div class="pro-img">
+                    <img src="./assets/images/5.webp" alt="key holder">
+                </div>
+                <div class="pro-desc">
+                    <h2>Ripple Creak Key <span class="break break1">Holder</span></h2>
+                    <p>$ 8.13</p>
+                    <button type="button" class="button">BUY NOW</button>
+                </div>
             </div>
-            <div class="product pro6">
-                <h2>Economical <span class="break break1">Cotton Canvas</span></h2>
-                <p>$ 11.08</p>
+            <div class="product">
+                <div class="pro-img">
+                    <img src="./assets/images/6.webp" alt="canvas">
+                </div>
+                <div class="pro-desc">
+                    <h2>Economical <span class="break break1">Cotton Canvas</span></h2>
+                    <p>$ 11.08</p>
+                    <button type="button" class="button">BUY NOW</button>
+                </div>
             </div>
-            <div class="product pro7">
-                <h2>Michael Kors <span class="break break1">Original</span></h2>
-                <p>$ 15.10</p>
+            <div class="product">
+                <div class="pro-img">
+                    <img src="./assets/images/7.webp" alt="original">
+                </div>
+                <div class="pro-desc">
+                    <h2>Michael Kors <span class="break break1">Original</span></h2>
+                    <p>$ 15.10</p>
+                    <button type="button" class="button">BUY NOW</button>
+                </div>
             </div>
-            <div class="product pro8">
-                <h2>Bostanten <span class="break break1">Women Leather</span></h2>
-                <p>$ 234.26</p>
+            <div class="product">
+                <div class="pro-img">
+                    <img src="./assets/images/8.webp" alt="leather bag">
+                </div>
+                <div class="pro-desc">
+                    <h2>Bostanten <span class="break break1">Women Leather</span></h2>
+                    <p>$ 234.26</p>
+                    <button type="button" class="button">BUY NOW</button>
+                </div>
             </div>
         </div>
     </section>
