removed product overlay & adjusted pro description

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <img src="./assets/images/13.webp" alt="furniture">
                 </div>
                 <div class="pro-desc">
-                    <h2>Christopher <span class="break break1">Knight Furniture</span></h2>
+                    <h2>Christopher Knight Furniture</h2>
                     <p>$ 235.23</p>
                     <button type="button" class="button">BUY NOW</button>
                 </div>
@@ -91,7 +91,7 @@
                     <img src="./assets/images/2 (3).webp" alt="cup">
                 </div>
                 <div class="pro-desc">
-                    <h2>Wheat Straw <span class="break break1">unbreakable cup</span></h2>
+                    <h2>Wheat Straw unbreakable cup</h2>
                     <p>$ 67.15</p>
                     <button type="button" class="button">BUY NOW</button>
                 </div>
@@ -101,7 +101,7 @@
                     <img src="./assets/images/3.webp" alt="bag">
                 </div>
                 <div class="pro-desc">
-                    <h2>Adidas Classic <span class="break break1">Bag</span></h2>
+                    <h2>Adidas Classic Bag</h2>
                     <p>$ 49.82</p>
                     <button type="button" class="button">BUY NOW</button>
                 </div>
@@ -111,7 +111,7 @@
                     <img src="./assets/images/4.webp" alt="pencil holder">
                 </div>
                 <div class="pro-desc">
-                    <h2>Desk Pencil - Pen <span class="break break1">Holder</span></h2>
+                    <h2>Desk Pencil - Pen Holder</h2>
                     <p>$ 22.30</p>
                     <button type="button" class="button">BUY NOW</button>
                 </div>
@@ -121,7 +121,7 @@
                     <img src="./assets/images/5.webp" alt="key holder">
                 </div>
                 <div class="pro-desc">
-                    <h2>Ripple Creak Key <span class="break break1">Holder</span></h2>
+                    <h2>Ripple Creak Key Holder</h2>
                     <p>$ 8.13</p>
                     <button type="button" class="button">BUY NOW</button>
                 </div>
@@ -131,7 +131,7 @@
                     <img src="./assets/images/6.webp" alt="canvas">
                 </div>
                 <div class="pro-desc">
-                    <h2>Economical <span class="break break1">Cotton Canvas</span></h2>
+                    <h2>Economical Cotton Canvas</h2>
                     <p>$ 11.08</p>
                     <button type="button" class="button">BUY NOW</button>
                 </div>
@@ -141,7 +141,7 @@
                     <img src="./assets/images/7.webp" alt="original">
                 </div>
                 <div class="pro-desc">
-                    <h2>Michael Kors <span class="break break1">Original</span></h2>
+                    <h2>Michael Kors Original</h2>
                     <p>$ 15.10</p>
                     <button type="button" class="button">BUY NOW</button>
                 </div>
@@ -151,7 +151,7 @@
                     <img src="./assets/images/8.webp" alt="leather bag">
                 </div>
                 <div class="pro-desc">
-                    <h2>Bostanten <span class="break break1">Women Leather</span></h2>
+                    <h2>Bostanten Women Leather</h2>
                     <p>$ 234.26</p>
                     <button type="button" class="button">BUY NOW</button>
                 </div>
