created promise section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <nav class="h-child nav-menu">
                     <ul>
                         <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Shop</a></li>
+                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#shop">Shop</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
@@ -73,7 +73,7 @@
             </div>
         </div>
     </section>
-    <section class="products"> <!--products section-->
+    <section id="shop" class="products"> <!--products section-->
         <h1 class="headline">Best Products</h1>
         <div class="pro-container">
             <div class="product">
@@ -158,7 +158,38 @@
             </div>
         </div>
     </section>
-    <section class="blog-section">
+    <section class="promise-section">
+        <div class="promise-container">
+            <div class="shipping">
+                <div>
+                    <i data-feather="truck"></i>
+                </div>
+                <div>
+                    <h2>Free Shipping</h2>
+                    <p>On all orders over $100</p>
+                </div>
+            </div>
+            <div class="support">
+                <div>
+                    <i data-feather="headphones"></i>
+                </div>
+                <div>
+                    <h2>Dedicated Support</h2>
+                    <p>Quick response 24/7</p>
+                </div>
+            </div>
+            <div class="guarantee">
+                <div>
+                    <i data-feather="dollar-sign"></i>
+                </div>
+                <div>
+                    <h2>Monay-Back Guarantee</h2>
+                    <p>Worry-free shopping</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="blog" class="blog-section"> <!--Blog section-->
         <h1 class="headline">Recent News</h1>
         <div class="blog-container">
             <article class="blog article1">
