completed promise section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/styles/hero.css">
     <link rel="stylesheet" href="./assets/styles/blog-footer.css">
     <link rel="stylesheet" href="./assets/styles/msg-products.css">
+    <link rel="stylesheet" href="./assets/styles/promise.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -158,31 +159,31 @@
             </div>
         </div>
     </section>
-    <section class="promise-section">
+    <section class="promise">
         <div class="promise-container">
-            <div class="shipping">
-                <div>
+            <div class="shipping prom">
+                <div class="prom-icon">
                     <i data-feather="truck"></i>
                 </div>
-                <div>
+                <div class="prom-text">
                     <h2>Free Shipping</h2>
                     <p>On all orders over $100</p>
                 </div>
             </div>
-            <div class="support">
-                <div>
+            <div class="support prom">
+                <div class="prom-icon">
                     <i data-feather="headphones"></i>
                 </div>
-                <div>
+                <div class="prom-text">
                     <h2>Dedicated Support</h2>
                     <p>Quick response 24/7</p>
                 </div>
             </div>
-            <div class="guarantee">
-                <div>
+            <div class="guarantee prom">
+                <div class="prom-icon">
                     <i data-feather="dollar-sign"></i>
                 </div>
-                <div>
+                <div class="prom-text">
                     <h2>Monay-Back Guarantee</h2>
                     <p>Worry-free shopping</p>
                 </div>
