removed portfolio link

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 </div>
                 <nav class="h-child nav-menu">
                     <ul>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#blog">Blog</a></li>
+                        <!-- <li><a href="#">Portfolio</a></li> -->
                         <li><a href="#shop">Shop</a></li>
+                        <li><a href="#blog">Blog</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
